--- a/SolutionSiteFirst/FirstSite/Views/Shared/_Layout.cshtml
+++ b/SolutionSiteFirst/FirstSite/Views/Shared/_Layout.cshtml
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="~/prj10.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link  rel="stylesheet" href="~/assets/css/theme-1.css">
+    <link  rel="stylesheet" href="~/assets/css/style.css">
     <title>Document</title>
 </head>
 
