action Return Type

--- a/SolutionSiteFirst/FirstSite/Views/Shared/_Layout.cshtml
+++ b/SolutionSiteFirst/FirstSite/Views/Shared/_Layout.cshtml
@@ -1,4 +1,5 @@
-﻿<!DOCTYPE html>
+﻿@using FirstSite.Controllers
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -19,5 +20,6 @@
 
     </header>
 </body>
+ @*<script type="text/javascript" src="@Url.Action("Index",controller:"Test")"></script>*@
 
 </html>
