--- a/SolutionSiteFirst/FirstSite/Views/Home/Contact.cshtml
+++ b/SolutionSiteFirst/FirstSite/Views/Home/Contact.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model ContactModel
 @{
     ViewData["Title"] = "ارتباط با ما";
 }
@@ -6,16 +6,20 @@
 <button style="margin-bottom: 30px;margin-left: 50px;margin-top: 30px;">
     <a asp-action="Index" asp-controller="Home">صفحه اصلی</a>
 </button>
-<form action="post">
+<form asp-action="Contact" metod="post" >
     <fieldset>
-        <label for="email">ایمیل خود را وارد کنید </label>
-        <input type="email" id="email" placeholder="for example Alirabieey@gmail.com" style="margin-left: 94px"><br><br>
-        <label for="tel">شماره تماس :</label>
-        <input type="tel" id="tel" placeholder="0921999999" style="margin-left: 141px;"><br><br>
-        <label for="ramz">رمز عبور خود را وارد کنید:</label>
-        <input type="password" id="ramz" placeholder="رمز خود را وارد کنید" style="margin-left: 61px;"> <br><br>
-        <label for="pish">پیشنهادات و انتقادات خود را به ما بگویید </label>
-        <input type="text" id="pish" placeholder=" نظر خود را بگویید" style="padding: 187px;"><br><br>
+        <label asp-for="Email">ایمیل خود را وارد کنید </label>
+        <input type="email" asp-for="Email" placeholder="for example Alirabieey@gmail.com" style="margin-left: 94px"><br><br>
+        <span asp-validation-for="Email" class="text-danger"></span><br/><br/>
+        <label asp-for="Tell">شماره تماس :</label>
+        <input type="tel" asp-for="Tell" placeholder="0921999999" style="margin-left: 141px;"><br><br>
+        <label asp-for="Password">رمز عبور خود را وارد کنید:</label>
+        <input type="password" asp-for="Password" placeholder="رمز خود را وارد کنید" style="margin-left: 61px;"> <br><br>
+        <label asp-for="Text">پیشنهادات و انتقادات خود را به ما بگویید </label>
+        <input type="text" asp-for="Text" placeholder=" نظر خود را بگویید" style="padding: 187px;"><br><br>
+        <div>
+            <button type="submit" class="btn-block btn-primary py-2">ارسال کنید...</button>
+        </div>
     </fieldset>
 </form>
 
