--- a/SolutionSiteFirst/FirstSite/Views/Shared/Header.cshtml
+++ b/SolutionSiteFirst/FirstSite/Views/Shared/Header.cshtml
@@ -20,7 +20,7 @@
             <a href="#">Courses</a>
         </li>
         <li>
-            <a href="#">Blog</a>
+            <a asp-action="formexe" asp-controller="Home">Blog</a>
         </li>
         <li>
             <a href="#" class="active">Register</a>
@@ -37,7 +37,7 @@
             </span>
             <br>
             <span>
-                Education platform
+                Education platmodel
             </span>
             <br>
             <span class="span2">
