--- a/SolutionSiteFirst/FirstSite/Views/Shared/_Layout.cshtml
+++ b/SolutionSiteFirst/FirstSite/Views/Shared/_Layout.cshtml
@@ -24,8 +24,8 @@
 <script src="~/assets/plugins/popper.min.js"></script>
 <script src="~/assets/plugins/bootstrap/js/bootstrap.min.js"></script>
 @* validation~/ jquery script(unobtrusive) *@
-<script src="~/lib/jquery-validation/dist/jquery.validate.min.js"></script>
-<script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
+@*<script src="~/lib/jquery-validation/dist/jquery.validate.min.js"></script>*@
+@*<script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>*@
 
 @*<script type="text/javascript" src="@Url.Action("Index",controller:"Test")"></script>*@
 
