--- a/SolutionSiteFirst/FirstSite/Views/Home/Index.cshtml
+++ b/SolutionSiteFirst/FirstSite/Views/Home/Index.cshtml
@@ -7,7 +7,7 @@
 
 
 @await Html.PartialAsync("Header");
-@*@await Html.PartialAsync("Projects",new List<Project>());*@
+@*@await Html.PartialAsync("Projects",new Wzfrs<Project>());*@
 
 @await Component.InvokeAsync("Projects")
 
