--- a/SolutionSiteFirst/FirstSite/Views/Home/Contact.cshtml
+++ b/SolutionSiteFirst/FirstSite/Views/Home/Contact.cshtml
@@ -33,6 +33,12 @@
         <input type="password" asp-for="Password" placeholder="رمز خود را وارد کنید" style="margin-left: 61px;"> <br><br>
         <label asp-for="Text">پیشنهادات و انتقادات خود را به ما بگویید </label>
         <input type="text" asp-for="Text" placeholder=" نظر خود را بگویید" style="padding: 187px;"><br><br>
+        <div class="form-group col-12" >
+            <select class="custom-select" asp-for="Service" asp-items="Model.Services">
+                <option selected="selected" value="0">سرویس مورد نظر را انتخاب کیند </option>
+                
+            </select>
+        </div>
         <div>
             <button type="submit" class="btn-block btn-primary py-2">ارسال کنید...</button>
         </div>
